--- a/public/css/story.css
+++ b/public/css/story.css
@@ -2,13 +2,11 @@ body{
   background-color: black;
 }
 
-#currentPic {
+.currentPic {
   position: absolute;
   top: -20px;
-  left:-30px;
 
 }
-
 
 #nextImage {
   position: absolute;
